manifests/immich/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-database
  labels:
    app: immich-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-database
  template:
    metadata:
      labels:
        app: immich-database
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - gpu-node-1
      containers:
        - name: immich-postgres
          image: "ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pvc-iscsi-immich-db

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
  labels:
    app: immich-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - gpu-node-1
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: immich-database
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        fsGroup: 2000
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
        - name: immich-server
          image: "ghcr.io/immich-app/immich-server:release"
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - name: immich-config
              mountPath: /opt/immich
            - name: library
              mountPath: /usr/src/app/upload
            - name: synology
              mountPath: /synology/media
            - name: nvidia-libraries
              mountPath: /usr/lib/x86_64-linux-gnu/libcuda.so.1
              subPath: libcuda.so.1
            - name: nvidia-libraries
              mountPath: /usr/lib/x86_64-linux-gnu/libnvidia-ml.so.1
              subPath: libnvidia-ml.so.1
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
              nvidia.com/gpu: 1
            limits:
              memory: "2Gi"
              cpu: "1500m"
              nvidia.com/gpu: 1
      volumes:
        - name: immich-config
          configMap:
            name: immich-config
        - name: library
          persistentVolumeClaim:
            claimName: pvc-nfs-immich-library
        - name: synology
          persistentVolumeClaim:
            claimName: pvc-nfs-synology-library
        - name: nvidia-libraries
          hostPath:
            path: /usr/lib/x86_64-linux-gnu
            type: Directory

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-machine-learning
  labels:
    app: immich-machine-learning
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      affinity:
        # nodeAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #     nodeSelectorTerms:
        #     - matchExpressions:
        #       - key: kubernetes.io/hostname
        #         operator: In
        #         values:
        #         - gpu-node-1
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: immich-database
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        fsGroup: 2000
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: immich-machine-learning
          image: "ghcr.io/immich-app/immich-machine-learning:release"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - name: cache
              mountPath: /cache
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
              # nvidia.com/gpu: 1   # Request 1 GPU
            limits:
              memory: "2Gi"
              cpu: "1000m"
              # nvidia.com/gpu: 1   # Request 1 GPU
      volumes:
        - name: cache
          emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: immich-database
  labels:
    app: immich-database
spec:
  type: ClusterIP
  selector:
    app: immich-database
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: immich-machine-learning
  labels:
    app: immich-machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: immich-server
  labels:
    app: immich-server
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: http
      protocol: TCP

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: immich-private
  labels:
    app: immich
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20480m
spec:
  rules:
    - host: "immich.j3laserna.me"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: http
  # tls:
  #   - hosts:
  #       - "photos.lan.stamx.nl"
  #     secretName: tls-wildcard-lan-stamx-nl
